{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 13,
  "lineage": "189a9542-2914-713e-b0ae-5869c669823b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:security-group/sg-07fcd8b8ce71f7aa6",
            "description": "for end user",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fcd8b8ce71f7aa6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afd7d39dfb4fc309"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "apache",
            "name_prefix": "",
            "owner_id": "400485426720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfe9456017dea0e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastionintrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionintrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:security-group/sg-0afd7d39dfb4fc309",
            "description": "for admin user",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afd7d39dfb4fc309",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.255.145.134/32"
                ],
                "description": "ssh for admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bation-intrp",
            "name_prefix": "",
            "owner_id": "400485426720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastionintrp",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "bastionintrp",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfe9456017dea0e0"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}